...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bSetWorkingHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="Set working hours"
                android:textSize="12dp" />

            <Button
                android:id="@+id/bViewServiceRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
